kubernetes/cluster0/apps/minio/minio/tenant/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: minio
spec:
  hostnames:
    - minio.${SECRET_PUBLIC_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: networking
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: minio-tenant-console
          namespace: minio
          port: 9443
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: forwardauth-authelia
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-api
  namespace: minio
spec:
  hostnames:
    - s3.${SECRET_PUBLIC_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: networking
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: minio
          namespace: minio
          port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
